syntax = "proto3";

package messenger;

option go_package = "./proto";

service EncryptionService {
    rpc Encrypt (EncryptRequest) returns (EncryptResponse);
    rpc Decrypt (DecryptRequest) returns (DecryptResponse);
}

message EncryptRequest {
    string message = 1;
}

message EncryptResponse {
    string encryptedMessage = 1;
}

message DecryptRequest {
    string encryptedMessage = 1;
}

message DecryptResponse {
    string DecryptedMessage = 1;
}